--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -9,54 +9,49 @@
 .photo {
     background-size: cover;
     width: 100%;
-    height: 530px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
 }
-
-.phototext {
+.bannerText {
     font-family: var(--title-font);
     font-size: 53.45px;
-    color: #2A379D;
+    color: #C6B0F5;
     padding-top: 40px;
+    text-align: center;
 }
 
 .homeButtonCTA {
+    font-family: var(--body-font);
     background-color: #FFD19C;
     color: white;
     border: none;
     width: 200px;
-    height: 50px;
-    font-size: 20px;
+    height: 45px;
+    font-size: 18x;
     border-radius: 5px;
-    margin: 10px;
     text-align: center;
     padding: 10px;
+    margin-top: -170px;
 }
 
 .homeButtonCTA:hover {
     background-color: #111F99;
+    color: white;
 }
 
 
 
 /* Fill and Color Sections */
 
-.PColors, .PFills {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.PColors, .PFills { 
     margin-top: 35px;
+    text-align: center;
+    padding: 20px;
 }
 
 .title {
     font-family: var(--title-font);
     color: #455274;
     font-size: 50px;
-    margin-top: 10px;
-    margin-bottom: 16px;
+    padding-bottom: 30px;
 }
 
 .PColors, .PFills {
@@ -64,15 +59,7 @@
 }
 
 /* COLOR IMAGES */
-.colorPhotos, .fillPhotos {
-    display: flex;
-    flex-direction: row;
-}
-
 .color, .fill {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     margin: 10px 20px;
     width: 100%;
 }
@@ -82,6 +69,12 @@
     height: 180px;
     margin: 10px;
     border-radius:50%;
+}
+
+.imageText {
+    font-family: var(--body-font);
+    margin-top: 10px;
+    color: #A8A8A8;
 }
 
 .school {
@@ -129,8 +122,10 @@
 }
 
 /* buttom button */
-.button-shop {
-    display: flex;
-    justify-content: center;
-    margin: 30px 0px;
+.bottom-button {
+    margin-top: 30px;
+}
+
+footer {
+    height: 50px;
 }
