--- a/src/pages/About/style.css
+++ b/src/pages/About/style.css
@@ -4,25 +4,6 @@
     --bold: 700;
 }
 
-/* Banner */
-
-
-.photo {
-    background:linear-gradient(to bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), url(https://images.unsplash.com/photo-1552650272-b8a34e21bc4b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3033&q=80);
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height: 530px;
-}
-
-.phototext {
-    font-family: var(--title-font);
-    color: #2A379D;
-    font-size: 53.45px;
-    padding: 40px 50px;
-    text-align: center;
-}
-
 /* About Text */
 
 .origin{
@@ -30,7 +11,7 @@
     height: 253px;
     display: flex;
     justify-content: center;
-    margin: 20px auto;
+    margin: 10px auto;
   
 }
 
@@ -45,7 +26,7 @@
 /* arrow */
 .stage {
     height: 70px;
-    margin: 30px 0px;
+    margin: 10px 0px;
     width: 100%;
     display: flex;
 }
@@ -53,7 +34,7 @@
     align-self: flex-end;
     animation-duration: 1.7s;
     animation-iteration-count: infinite;
-    color: #5C64A2;
+    color: rgba(92, 100, 162, 0.2);
     margin: 0px auto;
 }
 .bounce-1 {
