--- a/src/pages/Detail/style.css
+++ b/src/pages/Detail/style.css
@@ -33,7 +33,7 @@
 
 .itemSelectTitle {
     margin-top: 20px;
-    font-size: 20px;
+    font-size: 15px;
 }
 
 /* Fill and color buttons */
@@ -50,8 +50,7 @@
 }
 
 .customColor, .customFill  {
-    font-size: 12px;
-    height: 50px;
+    font-size: 10px;
     cursor: pointer;
 }
 
@@ -71,7 +70,8 @@
     color: #A8A8A8;
     font-family: var(--body-font);
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 12px;
+    padding-left: 10px;
 }
 
 .sign {
@@ -80,4 +80,14 @@
 
 .details {
     margin-top: 30px;
+}
+
+.selectedColor {
+    color: white;
+    background-color: #EDB678;
+}
+
+.selectedFill{
+    color: white;
+    background-color: #EDB678;
 }
