--- a/src/pages/Detail/style.css
+++ b/src/pages/Detail/style.css
@@ -54,7 +54,6 @@
     cursor: pointer;
 }
 
-
 .customFill:hover, .customColor:hover {
     color: white;
     background-color: #EDB678;
@@ -67,15 +66,25 @@
 
 /* Detail dropdown */
 .dropdownTitle {
-    color: #A8A8A8;
+    color: #455274;
     font-family: var(--body-font);
     text-transform: uppercase;
-    font-size: 12px;
+    font-size: 13px;
     padding-left: 10px;
+    cursor: pointer;
 }
 
 .sign {
     text-align: center;
+    cursor: pointer;
+}
+
+.openInfo {
+    cursor: pointer;
+    font-family: var(--bold);
+    color: #A8A8A8;
+    font-size: 12px;
+    padding: 7px 20px 7px 12px;
 }
 
 .details {
