--- a/src/pages/Detail/style.css
+++ b/src/pages/Detail/style.css
@@ -1,9 +1,3 @@
-:root {
-    --title-font: 'Kavoon', cursive;
-    --body-font:'Poppins', sans-serif;
-    --bold: 700;
-}
-
 
 .pagePath {
     font-family: var(--body-font);
@@ -67,6 +61,7 @@
 .detailLine {
     border-top: 2px solid #A8A8A8;
     margin: 3px;
+    padding: 4px 0px
 }
 
 
