--- a/src/components/Detail-body/style.css
+++ b/src/components/Detail-body/style.css
@@ -1,8 +1,3 @@
-:root {
-    --title-font: 'Kavoon', cursive;
-    --body-font:'Poppins', sans-serif;
-    --bold: 700;
-}
 /* product Text */
 
 .prodName {
@@ -34,6 +29,20 @@
 }
 
 .addToCart:hover {
-    font-weight: var(--bold);
+    color: white;
 }
 
+.favorite {
+    font-family: var(--body-font);
+    font-weight: var(--bold);
+    text-transform: uppercase;
+    font-size: 10px;
+    color:  #5C64A2;
+    text-align: center;
+    padding: 8px 0px;
+
+}
+
+.favorite:hover {
+    color:   #2A379D;
+}
