--- a/src/components/Detail-body/style.css
+++ b/src/components/Detail-body/style.css
@@ -19,6 +19,32 @@
     text-align: center;
 }
 
+
+.quantLabel {
+    font-family: var(--body-font);
+    color: #5C64A2;
+    font-size: 13px;
+    margin-right: 30px;
+}
+
+.quantarrow {
+    color: #EDB678;
+    font-size: 15px;
+    font-weight: var(--bold);
+    padding-bottom: 4 px 0px;
+}
+
+.quant {
+    text-align: center;
+    font-family: var(--body-font);
+    width: 18%;
+    background: none;
+    border: none;
+    margin: 0px;
+    padding: 0px;
+}
+
+
 .addToCart {
     background-color: #EDB678;
     border-radius: 5px;
@@ -32,7 +58,7 @@
     color: white;
 }
 
-.favorite {
+.addToFavorites, .favorite {
     font-family: var(--body-font);
     font-weight: var(--bold);
     text-transform: uppercase;
@@ -43,6 +69,7 @@
 
 }
 
-.favorite:hover {
+.addToFavorites:hover {
     color:   #2A379D;
+    cursor: pointer;
 }
