--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -22,6 +22,8 @@
 
   .heart, .cart {
     margin: 0px 30px;
+    z-index: 1;
+    position: relative;
   }
   
   #shop:hover, #about:hover, #contact:hover, .cart:hover,  .heart:hover {
@@ -32,6 +34,22 @@
     color: #455274;
     border-bottom: 3px solid #455274;
     transition: border-bottom .5s ease-in-out;
+  }
+
+  .cartselected {
+    color: #455274;
+  }
+
+  #cartNum {
+    font-family: var(--body-font);
+    background: #455274;
+    padding: 2px 6px;
+    margin: 0px 3px;
+    border-radius: 50%;
+    bottom: 30px;
+    color:white;
+    font-size: 11px;
+    font-weight: var(--bold);
   }
 
   
