--- a/src/pages/Cart/style.css
+++ b/src/pages/Cart/style.css
@@ -23,7 +23,7 @@
     text-transform: uppercase;
     font-family: var(--body-text);
     font-size: 15px;
-    color:  #A8A8A8;
+    color:  #455274;
 }
 
 .grandTotal {
@@ -50,7 +50,12 @@
     font-size: 13x;
     border-radius: 5px;
     text-align: center;
-    padding: 6px;
+    padding: 10px;
+    font-weight: var(--bold)
+}
+
+.cartButtonShop:hover {
+    background-color: #FFD19C;
 }
 
 .emptyCartText {
@@ -59,4 +64,8 @@
     text-transform: uppercase;
     font-weight: var(--bold);
     font-size: 14px;
+}
+
+.product-list {
+    padding-left: 0px;
 }
