--- a/src/components/Detail-body/style.css
+++ b/src/components/Detail-body/style.css
@@ -35,7 +35,7 @@
 }
 
 .quant {
-    text-align: center;
+    text-align: right;
     font-family: var(--body-font);
     width: 18%;
     background: none;
