--- a/src/pages/Detail/style.css
+++ b/src/pages/Detail/style.css
@@ -18,10 +18,10 @@
 
 /* Fill and color buttons */
 
-.customFill, .customColor {
+.customFill {
     border-radius: 5px;
-    color: white;
-    background-color: #B8C5D0;
+    color: #EDB678;
+    border: 2px solid #EDB678;
     font-weight: var(--bold);
 }
 
@@ -29,17 +29,17 @@
     text-align: center;
 }
 
-.customColor, .customFill  {
+.customFill, .customColor  {
     font-size: 10px;
     cursor: pointer;
 }
 
-.customFill:hover, .customColor:hover {
+.customFill:hover {
     color: white;
     background-color: #EDB678;
 }
 
-.selectedColor, .selectedFill{
+.selectedFill{
     background-color: #EDB678;
     color: white;
 }
@@ -68,11 +68,59 @@
 .openInfo {
     cursor: pointer;
     font-family: var(--bold);
-    color: #A8A8A8;
-    font-size: 12px;
+    color: #455274;
+    font-size: 14px;
     padding: 7px 20px 7px 12px;
 }
 
 .details {
     margin-top: 30px;
+}
+
+.MH {
+    border: 2px solid #bcbfc6;
+    border-radius: 5px;
+    color: #bcbfc6;
+    font-weight: var(--bold);
+}
+.selectedColorMH, .selectedColorCD:hover {
+    background-color: #bcbfc6;
+    color: white;
+}
+
+.CD {
+    border: 2px solid  #42495c;
+    border-radius: 5px;
+    color:  #42495c;
+    font-weight: var(--bold);
+}
+
+.selectedColorCD, .selectedColorCD:hover {
+    background-color: #42495c;
+    color: white;
+}
+
+.RD {
+    border: 2px solid #b6cbcc;
+    border-radius: 5px;
+    color: #b6cbcc;
+    font-weight: var(--bold);
+}
+
+.selectedColorRD, .selectedColorRD:hover {
+    background-color: #b6cbcc;
+    color: white;
+}
+
+
+.ASS {
+    border: 2px solid #FFC300;
+    border-radius: 5px;
+    color: #FFC300;
+    font-weight: var(--bold);
+}
+
+.selectedColorASS, .selectedColorASS:hover {
+    background-color: #FFC300;
+    color: white;
 }
