--- a/src/components/CheckoutSubNav/style.css
+++ b/src/components/CheckoutSubNav/style.css
@@ -1,25 +1,11 @@
 
-.productNav {
+.checkoutLine {
+  border-top: 3px solid#5C64A2;
+  width: 50px;
+  transform: translateY(50%);
+}
+
+.checkoutStatus {
+  margin: 10px;
   font-family: var(--body-font);
-  color: #EDB678;
-  background-color: white;
-  border: 2px solid #EDB678;
-  padding: 3px 30px;
-  text-align: center;
-  border-radius: 5px;
-  font-size: 10px;
-}
-
-.selectedProd {
-  background: #EDB678;
-  font-weight: var(--bold);
-  color: white;
-}
-
-.productNav:hover {
-  color: #EDB678;
-}
-
-.selectedProd:hover {
-  color: white;
 }
