--- a/src/pages/Checkout/style.css
+++ b/src/pages/Checkout/style.css
@@ -1,67 +1,25 @@
-.cartDiv {
-    background-color: rgba(69, 82, 116, 0.05);
-    border-radius: 2px;
-}
-
-.headerLabel {
-    font-family: var(--body-text);
-    font-size: 12px;
-    text-transform: uppercase;
-    padding: 2px 5px;
-    color:  #A8A8A8;
-}
-
-.cartHeader  {
-    border-bottom: 2px solid #A8A8A8;
-    padding-bottom: 5px;
-    margin: 0px 0px 10px;
-}
-
-.cartTotal {
-    border-top: 2px solid #A8A8A8;
-    margin: 10px 0px;
-    text-transform: uppercase;
-    font-family: var(--body-text);
+.checkoutPrice {
+    font-family: var(--body-font);
     font-size: 15px;
-    color:  #455274;
 }
 
-.grandTotal {
+.checkoutTotal {
+    font-size: 18px;
+    font-weight: var(--bold);
+}
+
+.checkoutToPayment {
+    margin: 25px auto;
+}
+
+.citystatezip {
+    width: 32%;
+}
+
+.checkoutCartTitle {
+    font-family: var(--body-font);
     font-size: 20px;
     font-weight: var(--bold);
+    margin-bottom: 10px;
     color: #5C64A2;
-}
-
-#emptyCart {
-    height: 300px;
-}
-
-.cartButtonShop {
-    font-family: var(--body-font);
-    background-color: #FFD19C;
-    color: white;
-    border: none;
-    width: 200px;
-    height: 45px;
-    border-radius: 5px;
-    text-align: center;
-    padding: 10px;
-    font-weight: var(--bold);
-}
-
-.cartButtonShop:hover {
-    background-color: #FFD19C;
-}
-
-.emptyCartFaveText {
-    text-align: center;
-    margin: 30px 30px 20px;
-    font-family: var(--body-text);
-    text-transform: uppercase;
-    font-weight: var(--bold);
-    font-size: 14px;
-}
-
-.product-list {
-    padding-left: 0px;
 }
